--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Primus</title>
+	<title>Primus R</title>
 </head>
 <body>
 <p>I am hosting my site via github.</p>
