--- a/index.html
+++ b/index.html
@@ -170,10 +170,12 @@
                     <p>I was born in a sleepy town in Nueva Ecija named Guimba. When I was young, I studied at the Our Lady of the Sacred Heart Academy until the 6th grade. I joined a lot of organizations and even became a member of the Knights of the Altar.</p>
                 </div>
                 <div class="col-lg-4">
+                    <p align="center">
+                    <img class ="img-responsive" src="img/dbti2.png" align="center"></p>
                     <p>Hight School is a bit different. I have to travel from our town to Tarlac City. I was blessed to study at Don Bosco Technical Institute. Gained a lot of frineds and equipped myself with experieces for the tertiary level.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p>University of the Cordilleras</p>
+                    <p><br><br>University of the Cordilleras</p>
                     <ul>
                         <li>Masters in Information Technology</li>
                         <li>Bachelor of Science in Information and Computing Science</li>
