--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@ var disqus_config = function () {
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>#47D La Residencia Generosa<br>Rimando Road<br>Baguio City</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
