--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ var disqus_config = function () {
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; primusreyes.github.io 2016
                     </div>
                 </div>
             </div>
