--- a/index.html
+++ b/index.html
@@ -167,19 +167,23 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I was born in a sleepy town in Nueva Ecija named Guimba. When I was young, I studied at the Our Lady of the Sacred Heart Academy until the 6th grade. I joined a lot of organizations and even became a member of the Knights of the Altar.</p>
+                    <p>I was born in a sleepy town in Guimba Nueva Ecija. When I was young, I studied at the Our Lady of the Sacred Heart Academy until the 6th grade. I joined a lot of organizations like the Boy Scouts of the Philippines, The Drum and Bugle Lyre and even became a member of the Knights of the Altar.</p>
                 </div>
                 <div class="col-lg-4">
                     <p align="center">
                     <img class ="img-responsive" src="img/dbti2.png" align="center"></p>
-                    <p>Hight School is a bit different. I have to travel from our town to Tarlac City. I was blessed to study at Don Bosco Technical Institute. Gained a lot of frineds and equipped myself with experieces for the tertiary level.</p>
+                    <p>Highschool is a bit different. I have to travel from our town to Tarlac City. I was fortunate enough to study at Don Bosco Technical Institute. Gained a lot of friends, skillsets and equipped myself with a lot of experiences, both learned inside and outside the said school.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p><br><br>University of the Cordilleras</p>
-                    <ul>
-                        <li>Masters in Information Technology</li>
-                        <li>Bachelor of Science in Information and Computing Science</li>
-                    </ul>
+
+                    <p><br><br>
+                    <img src="img/ucbcf.png"><br>
+                    University of the Cordilleras<br>
+                    Took up Bachelor of Science in Information and Computing Science in this University which became the only University granted by the Commision on Higher Education as Center for Excellence.
+
+
+                    </p>
+                    
                 </div>
             </div>
         </div>
@@ -290,10 +294,10 @@ var disqus_config = function () {
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Online Shopping Website</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This is a sample website created for an Online shopping.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
