--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ var disqus_config = function () {
                             <p>This is a sample website created for an Online shopping.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="https://primusreyes.github.io/webprojects/">Start Bootstrap</a>
                                     </strong>
                                 </li>
                                 <li>Date:
