--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                     <img class ="img-responsive" src="img/dbti2.png" align="center"></p>
                     <p>Highschool is a bit different. I have to travel from our town to Tarlac City. I was fortunate enough to study at Don Bosco Technical Institute. Gained a lot of friends, skillsets and equipped myself with a lot of experiences, both learned inside and outside the said school.</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-8 col-lg-offset-2">
 
                     <p><br><br>
                     <img src="img/ucbcf.png"><br>
-                    University of the Cordilleras<br>
+                    
                     Took up Bachelor of Science in Information and Computing Science in this University which became the only University granted by the Commision on Higher Education as Center for Excellence.
 
 
@@ -232,11 +232,11 @@ var disqus_config = function () {
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>Location</h3>
                         <p>#47D La Residencia Generosa<br>Rimando Road<br>Baguio City</p>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
@@ -256,10 +256,7 @@ var disqus_config = function () {
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -300,7 +297,7 @@ var disqus_config = function () {
                             <p>This is a sample website created for an Online shopping.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="https://primusreyes.github.io/webprojects/">Start Bootstrap</a>
+                                    <strong><a href="https://primusreyes.github.io/webprojects/">Online Shopping Demo</a>
                                     </strong>
                                 </li>
                                 <li>Date:
