--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/elibrary.PNG" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -291,13 +291,13 @@ var disqus_config = function () {
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Online Shopping Website</h2>
+                            <h2>eLibrary for UC CITCS</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>This is a sample website created for an Online shopping.</p>
+                            <img src="img/portfolio/elibrary.PNG" class="img-responsive img-centered" alt="">
+                            <p>An electronic library teachers and students can use to store their electronic documents, specifically for capstone projects that can be used as references for students undergoing research activies.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="https://primusreyes.github.io/webprojects/">Online Shopping Demo</a>
+                                    <strong><a href="http://elibrary.x10host.com/index.php/Main_Page/">elibrary</a>
                                     </strong>
                                 </li>
                                 <li>Date:
