--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <p><blockquote> I was born in a sleepy town in Guimba Nueva Ecija. When I was young, I studied at the Our Lady of the Sacred Heart Academy until the 6th grade. I joined a lot of organizations like the Boy Scouts of the Philippines, The Drum and Bugle Lyre and even became a member of the Knights of the Altar.</blockquote>
                     <br>
-                    <img src="img/guimba.png" align="center">    
+                      
                     </p>
+                    <p align="center"><img src="img/guimba.png"></p>
                 </div>
                 <div class="col-lg-4">
                     <p align="center">
