--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <br>
                       
                     </p>
-                    <p align="center"><img src="img/guimba.png"></p>
+                    <p align="center"><img src="img/guimba.PNG"></p>
                 </div>
                 <div class="col-lg-4">
                     <p align="center">
